// $Id$

Feeds 6.x xxxxxxxxxxxxxxxxxxxxxx
--------------------------------

- #913672 andrewlevine: Break out CSV Parser into submethods so it is more
  easily overridable
- #853974 snoldak924, alex_b: Fix XSS vulnerabilities in module.
- #887846 ekes: Make FeedsSimplePieEnclosure (un)serialization safe.
- #908582 XiaN Vizjereij, alex_b: Fix "Cannot use object of type stdClass as
  array" error in mappers/taxonomy.inc.
- #906654 alex_b: Fix phantom subscriptions.
- #867892 alex_b: PubSubHubbub - slow down import frequency of feeds that are
  subscribed to hub.
- #908964 alex_b: Break out scheduler. Note: Features depends on Job Scheduler
  module now: http://drupal.org/project/job_scheduler
- #663860 funkmasterjones, infojunkie, alex_b et. al.: hook_feeds_after_parse().
- #755556 Monkey Master, andrewlevine, alex_b: Support saving local files in
  filefields.
- #891982 bangpound, twistor: Support Link 2.x.
- #870278 budda: Fix SQL query in taxonomy_get_term_by_name_vid().
- #795114 budda, alex_b: Taxonomy term processor doesn't require vocabulary to
  be set.

Feeds 6.x 1.0 Beta 5, 2010-09-10
--------------------------------

- #849840 adityakg, rbayliss, alex_b: Submit full mapping on every submission.
- #849834 rbayliss, alex_b: Generalize feeds_config_form() to feeds_form().
- #907064 alex_b: Track imported terms.
- #906720 alex_b: Introduce a hook_feeds_after_clear().
- #905820 tristan.oneil: Adjust delete message in FeedsDataProcessor to avoid
  misleading total numbers.
- #671538 mburak: Use CURLOPT_TIMEOUT to limit download time of feeds.
- #878002 Will White, David Goode: Support multiple sources per mapping target
  in FeedsDataProcessor.
- #904804 alex_b: Support exportable vocabularies.
- #836876 rsoden, Will White, alex_b: Add simple georss support to Common
  Syndication Parser.
- #889196 David Goode: Support for non-numeric vocabulary IDs for feature-based
  vocabularies.
- #632920 nickbits, dixon_, David Goode, alex_b et al: Inherit OG, taxonomy,